# cardlens-research-terminal

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py
data/index/: embeddings.npz  meta.json
data/raw/: 01_mastercard_agent_suite.txt  02_cloudflare_mastercard_cyber.txt  03_cloudflare_mastercard_agentic.txt  04_mastercard_10k_2024.txt
pages/: 1_Case_Overview.py  1_QA_Chat.py  2_Fundamentals.py  3_Technicals.py  3_Valuation.py  4_Technicals.py  4_Valuation.py  5_News.py  6_QA_Chat.py  6_Sources.py  7_Decision.py  7_Recommendation.py
product/sections/: case_materials_index.md  project2_report.md
src/: embeddings.py  fetch_docs.py  ingest.py  qa.py  retrieval.py
tests/: test_smoke.py
